Fix spacing issues

--- a/styles/global.css
+++ b/styles/global.css
@@ -22,7 +22,7 @@
 }
 
 .post-list .post .post-content .post-link {
-    display: block;
+    display: flex;
 }
 
 :root {
